Fixed height and created custom scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
  * @Author: David M. Rojas Gonzalez // davidr.info 
  * @Date: 2019-03-04 13:34:59 
  * @Last Modified by: David M. Rojas Gonzalez // davidr.info
- * @Last Modified time: 2019-04-07 19:14:36
+ * @Last Modified time: 2019-04-07 19:50:27
 */
 @import './resources/vars/colors';
 @import './resources/globalStyles/inputs';
@@ -38,9 +38,27 @@
     padding: 1.5rem;
     width: 100%;
     min-height: 83.5vh;
+    max-height: 83.5vh;
 
     #PageWrapper{
-      height: 100%;
+      box-sizing: border-box;
+      padding: 1rem;
+      min-height: 100%;
+      overflow-y: auto;
+      box-shadow: inset 1px 1px 6px rgba(0,0,0,0.2);
+
+      &::-webkit-scrollbar{
+        width: 1.2rem;
+      }
+      &::-webkit-scrollbar-track{
+        background-color: rgba(0,0,0,0.2);
+      }
+      &::-webkit-scrollbar-thumb {
+        background: rgba(0,0,0,0.2);
+      }
+      &::-webkit-scrollbar-thumb:hover {
+        background: rgba(0,0,0,0.3);
+      }
     }
   }
 
